<resources>
    <string name="app_name">Tour&amp;Travels</string>
    <string name="email_address">Email address</string>
    <string name="email_addresses">Email address:</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account ? <font color="#03A9F4"> Sign Up </font></string>
    <string name="name">Name</string>
    <string name="customer">Customer</string>
    <string name="admin">Admin</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account ? <font color="#03A9F4"> Log In </font></string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="add_product">Add product</string>
    <string name="order_list">Order List</string>
    <string name="completed">Completed</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="add_address">Add Address</string>
    <string name="username">Name:</string>
    <string name="usertype">User Type:</string>
    <string name="product_name">Product name</string>
    <string name="product_sub_title">Product sub title</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="max_price">Max price</string>
    <string name="max_prices">Max price:</string>
    <string name="description">Description</string>
    <string name="select_image">Select Image</string>
    <string name="product_show_in_banner">Product show in Banner</string>
    <string name="product">Product</string>
    <string name="prices">Price:</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string-array name="category">
        <item>--Category--</item>
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
    </string-array>

    <string name="category">Category</string>
    <string name="view_all">view all</string>
    <string name="discount">Discount:</string>
    <string name="add_to_card">Add To Cart</string>
    <string name="buy">Buy</string>
    <string name="my_card">My Cart</string>
    <string name="address_line">Address line</string>
    <string name="address_line_two">Address line 2</string>
    <string name="pin_code">Pin code</string>
    <string name="state">State</string>
    <string name="city">City / District</string>
    <string name="phone_number">Phone Number</string>
    <string name="country">Country</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="billing">Billing</string>
    <string name="total">Total</string>
    <string name="total_amt">Total amt</string>
    <string name="submit">Submit</string>
    <string name="my_order">My Order</string>
    <string name="date">Date:</string>
    <string name="person_count">Person Count:</string>
    <string name="transaction_email">Transaction Email:</string>
    <string name="transaction_id">Transaction Id:</string>
    <string name="order">Order</string>
    <string name="confirmed">Confirmed</string>
    <string name="payment">Payment</string>
    <string name="address">Address</string>
    <string name="my_cart">My Cart</string>
</resources>