<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.admin.AddProductActivity">

    <TextView
        android:id="@+id/text_add_product_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/add_product"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/image_save_add_product"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_save"
        android:layout_marginEnd="10dp"
        app:tint="@color/purple_700"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="@id/text_add_product_page"
        app:layout_constraintTop_toTopOf="@id/text_add_product_page"
        app:layout_constraintBottom_toBottomOf="@id/text_add_product_page"/>

    <View
        android:id="@+id/view_add_product_page"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/hintColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/text_add_product_page"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toBottomOf="@id/view_add_product_page"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/eProductName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="none"
                android:background="@drawable/edit_background"
                android:hint="@string/product_name"
                android:includeFontPadding="false"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hintColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:listitem="@layout/spinner_text_layout"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_background"
                app:layout_constraintStart_toStartOf="@id/eProductName"
                app:layout_constraintEnd_toEndOf="@id/eProductName"
                app:layout_constraintTop_toBottomOf="@id/eProductSubTitle"/>

            <EditText
                android:id="@+id/eProductSubTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="none"
                android:background="@drawable/edit_background"
                android:hint="@string/product_sub_title"
                android:includeFontPadding="false"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hintColor"
                app:layout_constraintEnd_toEndOf="@id/eProductName"
                app:layout_constraintStart_toStartOf="@id/eProductName"
                app:layout_constraintTop_toBottomOf="@id/eProductName" />

            <EditText
                android:id="@+id/eProductQuantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="none"
                android:background="@drawable/edit_background"
                android:hint="@string/quantity"
                android:includeFontPadding="false"
                android:inputType="number"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hintColor"
                app:layout_constraintEnd_toEndOf="@id/eProductName"
                app:layout_constraintStart_toStartOf="@id/eProductName"
                app:layout_constraintTop_toBottomOf="@id/category_spinner" />

            <EditText
                android:id="@+id/eProductMaxPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="none"
                android:background="@drawable/edit_background"
                android:hint="@string/max_price"
                android:includeFontPadding="false"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hintColor"
                app:layout_constraintEnd_toEndOf="@id/eProductName"
                app:layout_constraintStart_toStartOf="@id/eProductName"
                app:layout_constraintTop_toBottomOf="@id/eProductQuantity" />

            <EditText
                android:id="@+id/eProductPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="none"
                android:background="@drawable/edit_background"
                android:hint="@string/price"
                android:includeFontPadding="false"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hintColor"
                app:layout_constraintEnd_toEndOf="@id/eProductName"
                app:layout_constraintStart_toStartOf="@id/eProductName"
                app:layout_constraintTop_toBottomOf="@id/eProductMaxPrice" />

            <EditText
                android:id="@+id/eProductDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="none"
                android:background="@drawable/edit_background"
                android:hint="@string/description"
                android:includeFontPadding="false"
                android:maxHeight="220dp"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hintColor"
                app:layout_constraintEnd_toEndOf="@id/eProductName"
                app:layout_constraintStart_toStartOf="@id/eProductName"
                app:layout_constraintTop_toBottomOf="@id/eProductPrice" />

            <TextView
                android:id="@+id/text_image_selection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/select_image"
                android:gravity="center"
                android:textColor="@color/black"
                android:background="@drawable/edit_background"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@id/eProductName"
                app:layout_constraintEnd_toEndOf="@id/eProductName"
                app:layout_constraintTop_toBottomOf="@id/eProductDescription"/>

            <ImageView
                android:id="@+id/image_selected_view"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/eProductName"
                app:layout_constraintEnd_toEndOf="@id/eProductName"
                app:layout_constraintTop_toBottomOf="@id/text_image_selection" />

            <CheckBox
                android:id="@+id/check_box_product_slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/product_show_in_banner"
                app:layout_constraintStart_toStartOf="@id/eProductName"
                app:layout_constraintEnd_toEndOf="@id/eProductName"
                app:layout_constraintTop_toBottomOf="@id/image_selected_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>