<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment">

    <TextView
        android:id="@+id/text_profile_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hintColor"
        app:layout_constraintTop_toBottomOf="@id/text_profile_page"/>

    <ScrollView
        android:contentDescription="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/text_profile_page"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/black"
                android:padding="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/text_user_name_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="8dp"
                android:layout_marginStart="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toEndOf="@id/text_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_name"/>

            <TextView
                android:id="@+id/text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_addresses"
                android:textColor="@color/black"
                android:padding="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_name"/>

            <TextView
                android:id="@+id/text_email_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="8dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toEndOf="@id/text_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_email"/>

            <TextView
                android:id="@+id/text_addToCard_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:padding="8dp"
                android:text="@string/my_card"
                android:gravity="center"
                android:background="@drawable/button_background"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@id/text_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_email"/>

            <TextView
                android:id="@+id/text_myOrder_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:padding="8dp"
                android:text="@string/my_order"
                android:gravity="center"
                android:background="@drawable/button_background"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@id/text_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_addToCard_profile"/>


            <TextView
                android:id="@+id/text_add_address_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/add_address"
                android:padding="8dp"
                android:background="@drawable/button_background"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@id/text_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_myOrder_profile"/>

            <ImageView
                android:id="@+id/add_address_image_profile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_add"
                app:tint="@color/white"
                android:padding="2dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/add_address_icon_background"
                app:layout_constraintEnd_toEndOf="@id/text_add_address_profile"
                app:layout_constraintTop_toTopOf="@id/text_add_address_profile"
                app:layout_constraintBottom_toBottomOf="@id/text_add_address_profile" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_add_address"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scrollbars="none"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintStart_toStartOf="@id/text_name"
                app:layout_constraintEnd_toEndOf="@id/text_user_name_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_add_address_profile"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>